# newPackCV-OCR

./: .coverage  .coze  .dockerignore  .env.example  .gitignore  .langsmith_config.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPTIMIZATION_PLAN.md  PUSH_FAILED_SOLUTION.md  PUSH_GUIDE.md  PUSH_TO_GITHUB.md  README.md  READY_TO_PUSH.md  SECURITY.md  SINGLE_PACKAGE_OPTIMIZATION.md  V1_3_COMPETITIVE_OPTIMIZATION_PLAN.md  V1_3_SUMMARY.md  coverage.json  create_test_image.py  docker-compose.base.yml  docker-compose.monitoring.yml  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  dump.rdb  entrypoint.sh  optimization_plan.md  push_to_github.sh  pyproject.toml  pyrightconfig.json  test_ocr.py  test_ocr_tesseract.py  test_ocr_valid.py  test_tesseract.py
.codegraph/: codegraph.db-shm
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
assets/: packcv_config.db
assets/eval/: accuracy_eval_set.json
assets/mock/: eval_final_report.json  eval_fresh2_urls.json  eval_fresh_urls.json  eval_report.json  eval_urls.json
assets/prompts/: few_shot_examples.json
config/: contract_extract_llm_cfg.json  correct_text_llm_cfg.json  finance_extract_llm_cfg.json  finance_statement_llm_cfg.json  general_extract_llm_cfg.json  id_card_extract_llm_cfg.json  info_extract_llm_cfg.json  knowledge_inference_llm_cfg.json  logistics_extract_llm_cfg.json  model_extract_llm_cfg.json  pharma_extract_llm_cfg.json  qa_answer_llm_cfg.json  rapidocr_optimized.yaml  scenario_detect_llm_cfg.json  unified_agent_llm_cfg.json  vl_info_extract_llm_cfg.json  vl_packaging_llm_cfg.json  vl_scenario_detect_llm_cfg.json
data/: llm_providers.json  rate_limits.json
deploy/: Dockerfile  docker-compose.yml  k8s-deployment.yaml  nginx.conf
docs/: DEPLOYMENT.md  INTEGRATION.md  OPERATIONS.md  README.md  SLA_HA.md  architecture.md  deployment.md  development.md
docs/api/: API_REFERENCE.md  README.md
docs/case-studies/: industry-roi.md
docs/customer/: api.md  best-practices.md  pricing.md  quickstart.md  scenarios.md  security.md  webhooks.md
docs/integrations/: INTEGRATION_GUIDE.md  MCP_SETUP.md
docs/scenarios/: README.md
examples/: basic_image_ocr.py  document_parse.py  scenario_specific.py  tenant_config.py
k8s/helm/: Chart.yaml  values.yaml
k8s/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  servicemonitor.yaml
monitoring/: alert_rules.yml  alertmanager.yml  grafana_dashboard.json  prometheus.yml
monitoring/grafana_provisioning/dashboards/: packcv.yml
nginx/: nginx.conf
postman/: PackCV.postman_collection.json
scripts/: auto_label_benchmark.py  batch_evaluate.py  benchmark_evaluate.py  evaluate_benchmark.py  final_evaluation.py  http_run.sh  postgres_init.sql  quality_check.sh  start-api-bg.sh  start.sh  stop.sh  upload_images.py
scripts/loadtest/: locustfile.py
sdk/js/: .gitignore  README.md  package.json  tsconfig.json
sdk/js/src/: async-client.ts  browser.ts  client.ts  exceptions.ts  index.ts  types.ts  utils.ts
sdk/js/tests/: client.test.ts
sdk/python/: DEVELOPMENT.md  README.md  pyproject.toml
sdk/python/packcv/: __init__.py  async_client.py  client.py  exceptions.py  models.py  types.py
sdk/python/tests/: __init__.py  test_client.py
src/: cozeloop.py  main.py  web_server.py
src/api/: __init__.py  main.py  metrics.py
src/api/middleware/: __init__.py  auth.py  metrics.py
src/api/routes/: api_lifecycle.py  billing.py  dashboard.py  health.py  monitoring.py  openapi.py  phase5.py  phase7.py  providers.py  system.py  webhooks.py  workflow.py
src/api_docs/: __init__.py  generator.py
src/api_versioning/: __init__.py  manager.py
src/audit/: __init__.py  logger.py
src/auth_sso/: __init__.py  oidc.py  rbac.py
src/billing/: __init__.py  engine.py  invoice.py
src/cli/: __init__.py  packcv_cli.py
src/config/: engine_adapter_cfg.json
src/config_hotreload/: __init__.py  manager.py
src/core/: __init__.py
src/core/cv/: __init__.py  cropper.py  detector.py  preprocessor.py
src/core/llm/: __init__.py  decision_maker.py  prompts.py
src/core/ocr/: __init__.py  builtin_ocr.py  ocr_scheduler.py
src/core/rule_engine/: __init__.py  alert.py  validator.py
src/data_lineage/: __init__.py  lineage.py
src/errors/: __init__.py  registry.py
src/gql_api/: __init__.py  schema.py
src/gradual_rollout/: __init__.py
src/graphs/: __init__.py  graph.py  packcv_graph.py  state.py
src/graphs/base/: __init__.py  base_graph.py
src/graphs/nodes/: __init__.py  alert_engine_node.py  barcode_detect_node.py  batch_process_node.py  call_audit_node.py  category_template_node.py  correct_text_node.py  cv_detection_node.py  cv_obb_detection_node.py  document_parse_node.py  feishu_notify_node.py  fine_grained_recognition_node.py  (+30 more)
src/i18n/: __init__.py
src/intelligence/: __init__.py  ab_testing.py  few_shot.py  llm_cache.py
src/mcp_server/: __init__.py  protocol.py  server.py  tools.py
src/monitoring/: realtime_dashboard.py
src/resilience/: __init__.py  circuit_breaker.py  graceful_shutdown.py
src/scenarios/: __init__.py  schemas.py
src/security/: __init__.py  data_masker.py
src/static/: demo.html
src/storage/: __init__.py  cache.py  database.py  db.py  models.py  oss.py  schema.sql
src/streaming/: __init__.py
src/tenancy/: __init__.py  adaptive_limiter.py  api_key_manager.py  context.py  fallback_policy.py  models.py  rate_limiter.py
src/tests/: __init__.py  benchmark.md  benchmark.py
src/tools/: backup.py
src/tracing/: __init__.py  tracer.py
src/utils/: config_hot_reload.py  config_manager.py  i18n.py  llm_client.py  llm_utils.py  logging_utils.py  metrics_utils.py  ocr_fusion.py  ocr_postprocess.py  performance.py  rate_limiter.py  redis_client.py  scenario_pipeline.py  table_detector.py
src/web/: __init__.py  marketing_routes.py  routes.py
src/webhook/: __init__.py  signing.py  types.py
(+72 files in other folders)
