[project]
name = "vibecoding-ocr"
version = "6.1.1"
description = "VibeCoding-OCR: 8场景多模态OCR + MinerU全格式文档解析 + VLM-First架构 + 三级配置链(开源OCR工作流引擎)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "VibeCoding Team", email = "team@vibecoding.dev" }
]
maintainers = [
    { name = "VibeCoding Team", email = "team@vibecoding.dev" }
]
keywords = ["ocr", "document-ai", "vlm", "multimodal", "langgraph", "mineru", "paddleocr", "extraction", "vision-language-model", "packaging", "finance", "pharmaceutical", "id-card", "contract", "logistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "langchain==1.0.3",
    "langchain-openai==1.0.1",
    "langgraph==1.0.2",
    "langgraph-checkpoint==3.0.0",
    "langgraph-prebuilt==1.0.2",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.39",
    "fastapi>=0.121,<1",
    "uvicorn>=0.38,<1",
    "pydantic>=2.12,<3",
    "Jinja2>=3.1,<4",
    "coze-coding-utils>=0.2.8",
    "coze-workload-identity>=0.1.4,<1",
    "opencv-python>=4.12,<5",
    "pandas>=2.2,<3",
    "Pillow>=10.3,<11",
    "cozeloop>=0.1.25,<1",
    "alembic>=1.16,<2",
    "SQLAlchemy>=2.0,<3",
    "python-dotenv>=1.2,<2",
    "psycopg2-binary>=2.9,<3",
    "boto3>=1.40,<2",
    "langgraph-checkpoint-postgres>=3.0,<4",
    "psycopg[binary]>=3.3,<4",
    "psycopg-pool>=3.3,<4",
    "pypdf>=6.4,<7",
    "docx2python>=3.5,<4",
    "openpyxl>=3.1,<4",
    "python-pptx>=1.0,<2",
    "coze-coding-dev-sdk>=0.5.19",
    "rich>=14,<15",
    "chardet>=5.2,<6",
    "pycairo==1.29.0",
    "dbus-python==1.3.2",
    "PyGObject==3.48.2",
    "paddleocr>=3.5.0",
    "opencv-python-headless>=4.13.0.92",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "reportlab>=4.4.10",
    "ultralytics>=8.4.41",
    "paddlepaddle>=3.3.1",
    "langchain-text-splitters>=1.1.2",
    "rapidocr-onnxruntime>=1.4.4",
    "easyocr>=1.7.2",
]

[project.urls]
Homepage = "https://github.com/vibecoding-ocr/vibecoding-ocr"
Repository = "https://github.com/vibecoding-ocr/vibecoding-ocr"
Issues = "https://github.com/vibecoding-ocr/vibecoding-ocr/issues"
Changelog = "https://github.com/vibecoding-ocr/vibecoding-ocr/blob/main/CHANGELOG.md"
Documentation = "https://github.com/vibecoding-ocr/vibecoding-ocr/blob/main/AGENTS.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pyright>=1.1.300",
    "ruff>=0.1.0",
    "black>=23.0",
    "isort>=5.12",
]
gpu = [
    "torch>=2.0",
    "torchvision>=0.15",]

[tool.uv]
# 使用阿里云镜像作为默认源，替代 pypi.org
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.pytest.ini_options]
pythonpath = ["src"]
