[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packcv-ocr"
version = "1.0.0"
description = "PackCV-OCR 多租户文档智能提取服务 - Python 客户端"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "PackCV Team", email = "team@packcv-ocr.io" }]
keywords = ["ocr", "document-ai", "multi-tenant", "api-client", "langgraph"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
async = ["httpx[asyncio]>=0.27.0"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/packcv-ocr/packcv-ocr-python"
Documentation = "https://docs.packcv-ocr.io"
Repository = "https://github.com/packcv-ocr/packcv-ocr-python"
Issues = "https://github.com/packcv-ocr/packcv-ocr-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["packcv*"]
